--- a/07-Vars-from-files.yaml
+++ b/07-Vars-from-files.yaml
@@ -1,7 +1,7 @@
 - name: "variables from files"
   hosts: local
   connection: local
-  vars:
+  vars_files:
     - courses.yaml
   tasks:
     - name: "Vars from Files"
