--- a/inventory.ini
+++ b/inventory.ini
@@ -1,9 +1,9 @@
 [web]
 172.31.28.163 NAME="Chouda Reddy" COURSE="DEVSECOPS with AZURE" ansible_user=ec2-user ansible_password=DevOps321
-localhost NAME="Srilatha" COURSE="DEVSECOPS with AWS" ansible_user=ec2-user ansible_password=DevOps321
+; localhost NAME="Srilatha" COURSE="DEVSECOPS with AWS" ansible_user=ec2-user ansible_password=DevOps321
 
 [local]
 localhost
 [local:vars]
-NAME="Chouda Reddy"
-COURSE="DEVSECOPS with AZURE"
+;NAME="Chouda Reddy"
+;COURSE="DEVSECOPS with AZURE"
