--- a/12-Vars-preference-order.yaml
+++ b/12-Vars-preference-order.yaml
@@ -5,10 +5,10 @@
     GREET: Play
   vars_files:
     - courses.yaml
-  vars_prompt:
-    - name: GREET
-      prompt: "Enter the value"
-      private: false
+  #vars_prompt:
+  # - name: GREET
+  #  prompt: "Enter the value"
+  # private: false
   tasks:
     - name: print the variables
       # vars:
