--- a/12-Vars-preference-order.yaml
+++ b/12-Vars-preference-order.yaml
@@ -1,8 +1,8 @@
 - name: "Variables Preference Order"
   hosts: local
   connection: local
-  vars:
-    GREET: Play
+  #vars:
+  # GREET: Play
   vars_files:
     - courses.yaml
   #vars_prompt:
