--- a/15-Facts.yaml
+++ b/15-Facts.yaml
@@ -4,4 +4,4 @@
   tasks:
     - name: Print Ansible Facts
       ansible.builtin.debug:
-        msg: { { ansible_facts } }
+        msg: "{{ ansible_facts }}"
