--- a/inventory.ini
+++ b/inventory.ini
@@ -1,6 +1,5 @@
 [web]
-172.31.28.15 
-;NAME="Chouda Reddy" COURSE="DEVSECOPS with AZURE" ansible_user=ec2-user ansible_password=DevOps321
+172.31.28.15 ansible_user=ec2-user ansible_password=DevOps321
 ; localhost NAME="Srilatha" COURSE="DEVSECOPS with AWS" ansible_user=ec2-user ansible_password=DevOps321
 
 [local]
