--- a/16-Conditions-Advanced.yaml
+++ b/16-Conditions-Advanced.yaml
@@ -6,7 +6,7 @@
       ansible.builtin.dnf:
         name: nginx
         state: installed
-      when: ansible_os_family == "RHEL"
+      when: ansible_os_family == "RedHat"
     - name: "Install Nginx if Ubantu"
       ansible.builtin.apt:
         name: nginx
