--- a/19-Loops-Adv1.yaml
+++ b/19-Loops-Adv1.yaml
@@ -7,7 +7,7 @@
         name: "{{ item.name }}"
         state: "{{ item.state }}"
       loop:
-        - { name: "gcc", state: "present" }
-        - { name: "mysql", state: "absent" }
-        - { name: "git", state: "present" }
-        - { name: "zip", state: "absent" }
+        - { name: "gcc", state: "absent" }
+        - { name: "mysql", state: "present" }
+        - { name: "git", state: "absent" }
+        - { name: "zip", state: "present" }
