--- a/23-create-ec2-r53.yaml
+++ b/23-create-ec2-r53.yaml
@@ -29,5 +29,5 @@
     register: ec2_info
 
   - name: print ec2_info
-    ansible.buildin.debug:
+    ansible.builtin.debug:
       msg: "{{ ec2_info }}"
