--- a/23-create-ec2-r53.yaml
+++ b/23-create-ec2-r53.yaml
@@ -31,3 +31,8 @@
   - name: print ec2_info
     ansible.builtin.debug:
       msg: "{{ ec2_info }}"
+
+  - name: print private IP Address
+    ansible.builtin.debug:
+      msg: "{{ item.item }}: {{ item.instance[0].private_ip_address }}"
+    loop: "{{ ec2_info.results }}"
