--- a/23-create-ec2-r53.yaml
+++ b/23-create-ec2-r53.yaml
@@ -34,5 +34,5 @@
 
   - name: print private IP Address
     ansible.builtin.debug:
-      msg: "{{ item.instance[0].private_ip_address }}"
+      msg: "{{ item.instances[0].private_ip_address }}"
     loop: "{{ ec2_info.results }}"
