--- a/23-create-ec2-r53.yaml
+++ b/23-create-ec2-r53.yaml
@@ -6,6 +6,7 @@
     sg_id: sg-03c8474df31a22bcf
     ami_id: ami-09c813fb71547fc4f
     instance_type: t2.micro
+    zone: sridevsecops.store
     instances:
     - mysql
     - backend
@@ -35,4 +36,16 @@
   - name: print private IP Address
     ansible.builtin.debug:
       msg: "{{ item.instances[0].private_ip_address }}"
+    loop: "{{ ec2_info.results }}"
+  
+  - name: Create private ip R53 records
+    amazon.aws.route53:
+      state: present
+      zone: "{{ zone }}"
+      record: "{{ item.item }}.{{ zone }}"
+      type: A 
+      ttl: 1
+      value: "{{ item.instances[0].private_ip_address }}"
+      wait: true
+      overwrite: true
     loop: "{{ ec2_info.results }}"
